--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: 4.3.8
   html_unescape: ^2.0.0
+  file_picker: ^4.4.0
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
