--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,11 @@ dependencies:
   html_unescape: ^2.0.0
   file_picker: ^4.4.0
   flutter_spinkit: ^5.1.0
+  get_storage: ^2.0.3
+  hive: ^2.1.0
+  path_provider: ^2.0.4
+  path_provider_macos: ^2.0.5
+  device_info: ^2.0.3
 
 dev_dependencies:
   flutter_test:
