--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   path_provider: ^2.0.4
   path_provider_macos: ^2.0.5
   device_info: ^2.0.3
+  process_run: ^0.12.1+1
+  package_info_plus: ^1.4.2
 
 dev_dependencies:
   flutter_test:
