--- a/installers/macos/config.json
+++ b/installers/macos/config.json
@@ -1,6 +1,6 @@
 {
     "title": "Shinobi Tool",
-    "icon": "app_icon.icns",
+    "icon": "icon.png",
     "contents": [
         {
             "x": 448,
