--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,16 @@ dependencies:
   device_info: ^2.0.3
   process_run: ^0.12.1+1
   package_info_plus: ^1.4.2
+  flutter_launcher_icons: ^0.9.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
