--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   process_run: ^0.12.1+1
   package_info_plus: ^1.4.2
   flutter_launcher_icons: ^0.9.2
+  font_awesome_flutter: ^10.1.0
 
 dev_dependencies:
   flutter_test:
